# weather_api

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflow/: workflow.yml
.github/workflows/: main.yml
tests/: test_weather.py
weather_api/: __init__.py  owm_key.py  weather.py
