[metadata]
name = weather_api
version = 0.1.0
author = kara
author_email = radmir-lbragimov@mail.ru
description = Запрос погоды
long_description = file: README.md
long_description_content_type = text/markdown
url = ...
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    requests
python_requires = >=3.6
